syntax = "proto3";
option go_package ="./pb";
package space;

service SpaceService {
    rpc Create (SpaceCreateRequest) returns (SpaceCreateReply);
    rpc Remove (SpaceRemoveRequest) returns (SpaceRemoveReply);
    rpc Info (SpaceInfoRequest) returns (SpaceInfoReply);
    rpc List (SpaceListRequest) returns (SpaceListReply);
}

message SpaceCreateRequest {
    // length > 6
    string name = 1;
    string repos = 2;
    string binary = 3;
}
message SpaceCreateReply {
    SpaceError error = 1;
    Space data = 2;
}

message SpaceRemoveRequest {
    // required
    int64 spaceID = 1;
}
message SpaceRemoveReply {
    SpaceError error = 1;
}

message SpaceInfoRequest {
    // required
    int64 spaceID = 1;
}
message SpaceInfoReply {
    SpaceError error = 1;
    Space data = 2;
}

message SpaceListRequest {
    // default 1
    int64 page = 1;
    // default 10
    int64 count = 2;
    string key = 3;
    string value = 4;
}
message SpaceListReply {
    SpaceError error = 1;
    repeated Space data = 2;
    int64 total = 3;
}

message Space {
    int64 spaceID = 1;
    string name = 2;
    string repos = 3;
    string binary = 4;
}

message SpaceError {
    int64 code = 1;
    string info = 2;
}
